
090121	Allow the service to be installed with another service name:
	mrbig -iSomeOtherServiceName
	mrbig -uSomeOtherServiceName
	This allows a second instance of Mr Big to be installed and used
	for cluster monitoring.
	Make the maximum report size configurable:
	report_size XXX
	The default size is still 5000 bytes.

090116	msgs.c: Close hTestKey after use.
	Released 0.19.1.

090114	cfg.c: Use cfg.cache- as temporary file when reading configuration.
	In case of error, write the error to cfg.cache- as well as the log.
	Released 0.19.0.

090113	mrbig.c: New directive to set options:
	option [option_name]
	This is used to selectively disable tests:
	option no_cpu|no_disk|no_wmi et al
	All disabled tests except wmi and ext get clear status.

090112	msgs.c: New setting fastmsgs speeds up message processing by only
	looking at the last 64k. Three modes:
	option fastmsgs=on always does does the simplified processing
	option fastmsgs=off always reads all the messages
	option fastmsgs=auto (the default) behaves like off unless the file
	fastmsgs.cfg exists in the configuration directory. The file
	can be empty.

081127	procs: list total and unique process count.
	Released 0.18.1.

081120	Released 0.18.0 with complete support for x64 and wmi.

081118	New module wmi.c allows monitoring anything that is
	available from wmi.

081113	Display architecture in cpu status page.
	Changed format of disk status page to not confuse the
	rrd module do_disk.c in hobbit.
	New test for memory in memory.c. Status page is compatible
	with the rrd module do_memory.c in hobbit.

081112	Multi-architecture build environment.

081110	Beta release of native 64-bit version.

081106	In procs.c: allow process names in double quotes, e.g.
	"Ulric fibbar.exe" 1 2
	Released 0.17.0

080130	More debugging code in msgs.c.

080122	Fixed a bug in the memory debugging code.
	Released 0.16.1.

071211	Added new filtering rule for messages: perform action based on
	log name. Example:
	ignore log Application